--- a/bin/main/static/css/main.css
+++ b/bin/main/static/css/main.css
@@ -5,7 +5,8 @@ html, body, .contain {
 	width: 100%;
 	min-width: 1360px;
 	height: 100%;
-	min-height: 458px;
+	min-height: 438px;
+	overflow: hidden;
 }
 .search_form {
 	border: thin solid #e4e7ed;
@@ -16,3 +17,10 @@ html, body, .contain {
 	clear: both;
 	margin: 15px 0;
 }
+::-webkit-scrollbar { width: 10px; height: 10px; }
+::-webkit-scrollbar-button { display: none; }
+::-webkit-scrollbar-track { display: none; }
+::-webkit-scrollbar-track-piece { display: none; }
+::-webkit-scrollbar-thumb { background: rgba(220,223,230, 0.5); border-radius: 5px; }
+::-webkit-scrollbar-corner { display: none; }
+::-webkit-scrollbar-resizer  { display: none; }
