--- a/src/main/resources/templates/system/account/account_list.html
+++ b/src/main/resources/templates/system/account/account_list.html
@@ -8,14 +8,14 @@
 	<div id="app">
 		<!-- 检索条件 -->
 		<div class="search_form">
-			<el-form id="form" ref="form" :inline="true" :model="form" label-width="100px" label-suffix=":" size="small">
+			<el-form id="form" ref="form" :inline="true" :model="searchForm" label-width="100px" label-suffix=":" size="small">
 				<el-row>
 					<el-col :span="6">
-						<el-form-item th:label="#{帐号ID}"><el-input v-model="form.accountId"></el-input></el-form-item>
+						<el-form-item th:label="#{帐号ID}"><el-input v-model="searchForm.accountId"></el-input></el-form-item>
 					</el-col>
 					<el-col :span="6">
 						<el-form-item th:label="#{是否可用}">
-							<el-select v-model="form.enabled">
+							<el-select v-model="searchForm.enabled">
 								<el-option key="" th:label="#{全部}" value=""></el-option>
 								<el-option v-for="item in code.enabled" :key="item.value" :label="item.label" :value="item.value"></el-option>
 							</el-select>
@@ -23,7 +23,7 @@
 					</el-col>
 					<el-col :span="6">
 						<el-form-item th:label="#{是否过期}">
-							<el-select v-model="form.nonExpired">
+							<el-select v-model="searchForm.nonExpired">
 								<el-option key="" th:label="#{全部}" value=""></el-option>
 								<el-option v-for="item in code.nonExpired" :key="item.value" :label="item.label" :value="item.value"></el-option>
 							</el-select>
@@ -32,11 +32,11 @@
 				</el-row>
 				<el-row>
 					<el-col :span="6">
-						<el-form-item th:label="#{用户名称}"><el-input v-model="form.accountNm"></el-input></el-form-item>
+						<el-form-item th:label="#{用户名称}"><el-input v-model="searchForm.accountNm"></el-input></el-form-item>
 					</el-col>
 					<el-col :span="6">
 						<el-form-item th:label="#{是否锁定}">
-							<el-select v-model="form.nonLocked">
+							<el-select v-model="searchForm.nonLocked">
 								<el-option key="" th:label="#{全部}" value=""></el-option>
 								<el-option v-for="item in code.nonLocked" :key="item.value" :label="item.label" :value="item.value"></el-option>
 							</el-select>
@@ -44,7 +44,7 @@
 					</el-col>
 					<el-col :span="6">
 						<el-form-item th:label="#{凭证是否过期}">
-							<el-select v-model="form.credentialsNonExpired">
+							<el-select v-model="searchForm.credentialsNonExpired">
 								<el-option key="" th:label="#{全部}" value=""></el-option>
 								<el-option v-for="item in code.credentialsNonExpired" :key="item.value" :label="item.label" :value="item.value"></el-option>
 							</el-select>
@@ -66,26 +66,74 @@
 		<!-- 列表 -->
 		<el-row>
 			<el-col :span="7">
-				<el-table class="table" :data="tableData" style="width: 100%" height="350" size="mini"
+				<el-table class="table" :data="tableData" height="350" size="mini"
 						border stripe highlight-current-row @current-change="handleCurrentChange"
 						tooltip-effect="dark" th:empty-text="#{暂无数据}">
 					<el-table-column type="index" sortable width="36" fixed></el-table-column>
 					<el-table-column type="selection" width="36" fixed></el-table-column>
 					<el-table-column prop="accountCd" th:label="#{帐号CD}" sortable fixed></el-table-column>
 					<el-table-column prop="accountId" th:label="#{帐号ID}" sortable></el-table-column>
+					<el-table-column prop="accountNm" th:label="#{用户名称}" sortable></el-table-column>
 					
 				</el-table>
 			</el-col>
 			<el-col :span="17" style="padding-left: 20px;">
 				<el-card class="input" shadow="never">
 					<div slot="header">
-						<span>卡片名称</span>
-						<el-button size="mini" icon="el-icon-download" th:text="#{导出}"></el-button>
+						<span th:text="#{帐号} + #{添加}"></span>
+						<el-button size="small" icon="el-icon-download" th:text="#{保存}" v-on:click="save"></el-button>
 					</div>
-					<div>
-						卡片名称
-						</br>
-						卡片名称
+					<div style="overflow: sc">
+						<el-form ref="form" :model="inputForm" label-width="100px" label-suffix=":" size="small">
+							<el-row>
+								<el-col :span="10">
+									<el-form-item th:label="#{帐号ID}"><el-input v-model="inputForm.accountId"></el-input></el-form-item>
+								</el-col>
+								<el-col :span="10">
+									<el-form-item th:label="#{用户名称}"><el-input v-model="inputForm.accountNm"></el-input></el-form-item>
+								</el-col>
+							</el-row>
+							<el-row>
+								<el-col :span="10">
+									<el-form-item th:label="#{手机号}"><el-input v-model="inputForm.tel"></el-input></el-form-item>
+								</el-col>
+								<el-col :span="10">
+									<el-form-item th:label="#{邮箱}"><el-input v-model="inputForm.email"></el-input></el-form-item>
+								</el-col>
+							</el-row>
+							<el-row>
+								<el-col :span="10">
+									<el-form-item th:label="#{是否可用}">
+										<el-select v-model="inputForm.enabled">
+											<el-option v-for="item in code.enabled" :key="item.value" :label="item.label" :value="item.value"></el-option>
+										</el-select>
+									</el-form-item>
+								</el-col>
+								<el-col :span="10">
+									<el-form-item th:label="#{是否锁定}">
+										<el-select v-model="inputForm.nonLocked">
+											<el-option v-for="item in code.nonLocked" :key="item.value" :label="item.label" :value="item.value"></el-option>
+										</el-select>
+									</el-form-item>
+								</el-col>
+							</el-row>
+							<el-row>
+								<el-col :span="10">
+									<el-form-item th:label="#{是否过期}">
+										<el-select v-model="inputForm.nonExpired">
+											<el-option v-for="item in code.nonExpired" :key="item.value" :label="item.label" :value="item.value"></el-option>
+										</el-select>
+									</el-form-item>
+								</el-col>
+								<el-col :span="10">
+									<el-form-item th:label="#{凭证是否过期}">
+										<el-select v-model="inputForm.credentialsNonExpired">
+											<el-option v-for="item in code.credentialsNonExpired" :key="item.value" :label="item.label" :value="item.value"></el-option>
+										</el-select>
+									</el-form-item>
+								</el-col>
+							</el-row>
+						</el-form>
 					</div>
 				</el-card>
 			</el-col>
@@ -97,12 +145,17 @@
     
     <script type="text/javascript">
 	/*<![CDATA[*/
+		
+		console.log(main);
+		
 		var vue = new Vue({
 			el: '#app',
 			data: function() {
 				return {
 					code: code,
-					form: {
+					tableData: [],
+					selectData: {},
+					searchForm: {
 						accountId: '',
 						accountNm: '',
 						enabled: '',
@@ -110,7 +163,19 @@
 						nonExpired: '',
 						credentialsNonExpired: ''
 					},
-					tableData: []
+					inputForm: {
+						accountCd: 0,
+						accountId: '',
+						accountPw: '',
+						accountNm: '',
+						enabled: 'Y',
+						nonLocked: 'Y',
+						nonExpired: 'Y',
+						credentialsNonExpired: 'Y',
+						tel: '',
+						email: ''
+					}
+					
 				}
 			},
 			created: function () {
@@ -119,29 +184,58 @@
 			methods: {
 				// 检索
 				search: function() {
-					axiosUtil.post("/account/search", this.form, function (result) {
+					axiosUtil.post("/account/search", this.searchForm, function (result) {
 						vue.tableData = result;
 					}, this, true);
 				},
+				// 表格选择事件
+				handleCurrentChange(val) {
+					this.selectData = val;
+				},
 				// 添加
 				add: function() {
-					
+					this.inputForm = {
+						accountCd: 0,
+						accountId: '',
+						accountPw: '',
+						accountNm: '',
+						enabled: 'Y',
+						nonLocked: 'Y',
+						nonExpired: 'Y',
+						credentialsNonExpired: 'Y',
+						tel: '',
+						email: ''
+					}
 				},
 				// 修改
 				up: function() {
-					
+					this.inputForm = this.selectData;
 				},
 				// 删除
 				del: function() {
-					
+					this.$confirm('[[#{此操作将永久删除该数据，是否继续}]]', '[[#{系统提示}]]', {
+				          confirmButtonText: '[[#{删除}]]',
+				          cancelButtonText: '[[#{取消}]]',
+				          type: 'info'
+				        }).then(() => {
+				        	axiosUtil.post("/account/del", this.selectData, function (result) {
+				        		vue.$message({ type: 'success', message: '[[#{删除成功}]]' });
+								vue.search();
+							}, this, true);
+				        }).catch(() => {
+				        	this.$message({ type: 'info', message: '[[#{已取消操作}]]' });
+				        });
+				},
+				save: function () {
+					axiosUtil.post("/account/save", this.inputForm, function (result) {
+						vue.search();
+					}, this, true);
 				},
 				// 到处Excel
 				excel: function() {
 					
-				},
-				handleCurrentChange(val) {
-					this.currentRow = val;
 				}
+				
 		    }
 		});
 	/*]]>*/
