--- a/src/main/resources/templates/main/login.html
+++ b/src/main/resources/templates/main/login.html
@@ -75,7 +75,7 @@
         new Vue({
             el: '#app',
             data: {
-                locale: '[[#{locale}]]',
+                locale: '[[${locale}]]',
                 accountId: 'admin',
                 accountPw: '1234'
             },
